# btetto

./: .gitignore  Cargo.toml  README.md  bpftrace_trace.binpb  btetto.py  build.rs  perfetto_trace.proto  perfetto_trace_pb2.py  track_events.json
example_scripts/: biolatency.bt  call_stack_sample.bt  cap_capable.bt  counter.bt  trace_event.bt  track_descriptor.bt  track_event.bt
src/: main.rs  util.rs
src/protos/: mod.rs  perfetto_bpftrace.proto
