[package]
name = "btetto"
version = "0.1.3"
edition = "2021"
license = "BSD-2-Clause OR LGPL-2.1"
description = "A tool that produces Perfetto protobuf from formatted bpftrace output."
repository = "https://github.com/jordalgo/btetto"
homepage = "https://github.com/jordalgo/btetto/blob/trunk/README.md"
readme = "README.md"

[dependencies]
ctrlc = "3.4.5"
protobuf = "3.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
protobuf-codegen = "3.7.1"